# ckproof

./: Cargo.toml  README.md
src/: lib.rs  main.rs  rendered.rs
src/builders/: bibliography.rs  deduction.rs  directory.rs  errors.rs  index.rs  justification.rs  language.rs  mod.rs  structure.rs  syntax.pest  system.rs  text.rs
src/core/: errors.rs  language.rs  mod.rs  substitution.rs  system.rs
src/deduction/: directory.rs  errors.rs  mod.rs  substitution.rs  system.rs
src/document/: bibliography.rs  deduction.rs  directory.rs  errors.rs  language.rs  mod.rs  structure.rs  system.rs  text.rs
