[package]
name = "ckproof"
version = "0.1.0"
authors = ["TopologicallySpeaking <64005627+TopologicallySpeaking@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pest = "2.1"
pest_derive = "2.1"
itertools = "0.9"
url = "2.2"
